options for age group

--- a/registration.html
+++ b/registration.html
@@ -39,9 +39,13 @@
         <input type="Password" name="password" id="pass" required>
         <br>
         <label for="age">Select Age Group</label>
-        <select name="under 18" id="18">Under 18</select>
-        <!-- <select name="under 18" id="18">Under 30</select>
-        <select name="under 18" id="18">Open</select> -->
+        <select name="age" id="18">
+            <option>Under 18</option>
+            <option>Under 30</option>
+            <option>Open</option>
+        
+        </select>
+        
         <br>
         <button>Register!!</button>
     </div>
